Add badge to README

--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Online Normalization (onorm)"
+    "# Online Normalization (onorm)\n",
+    "\n",
+    "[![ci](https://github.com/ddimmery/onorm/actions/workflows/ci.yml/badge.svg)](https://github.com/ddimmery/onorm/actions/workflows/ci.yml)"
    ]
   },
   {
