--- a/README
+++ b/README
@@ -1,18 +1,20 @@
 Online Normalization (onorm)
 ============================
 
+|ci|
+
 .. code:: python
 
    import numpy as np
-   from plotnine import ggplot, geom_point, aes, theme_minimal
    import pandas as pd
+   from plotnine import aes, geom_point, ggplot, theme_minimal
 
 .. code:: python
 
    n = 100
    d = 2
 
-   X = np.random.normal(size = (n, d))
+   X = np.random.normal(size=(n, d))
    df = pd.DataFrame(X, columns=["X1", "X2"])
 
    ggplot(df, aes("X1", "X2")) + geom_point() + theme_minimal()
@@ -21,3 +23,6 @@ Online Normalization (onorm)
    :alt: png
 
    png
+
+.. |ci| image:: https://github.com/ddimmery/onorm/actions/workflows/ci.yml/badge.svg
+   :target: https://github.com/ddimmery/onorm/actions/workflows/ci.yml
