--- a/README.ipynb
+++ b/README.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Online Normalization (onorm)\n",
     "\n",
-    "[![ci](https://github.com/ddimmery/onorm/actions/workflows/ci.yml/badge.svg)](https://github.com/ddimmery/onorm/actions/workflows/ci.yml)"
+    "[![Contributor Covenant](https://img.shields.io/badge/Contributor%20Covenant-2.1-4baaaa.svg)](code-of-conduct.md)\n",
+    "[![ci](https://github.com/ddimmery/onorm/actions/workflows/ci.yml/badge.svg)](https://github.com/ddimmery/onorm/actions/workflows/ci.yml)\n",
+    "![PyPI](https://img.shields.io/pypi/v/onorm)"
    ]
   },
   {
